crates/cuda-macros/tests/compile_fail/ptx_asm_requires_unsafe.stderr
error[E0133]: call to unsafe function `__ptx_asm_out_1` is unsafe and requires unsafe block
  --> tests/compile_fail/ptx_asm_requires_unsafe.rs:31:5
   |
31 |     ptx_asm!("add.u32 %0, %1, %1;", out("=r") y, in("r") x);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: this error originates in the macro `ptx_asm` (in Nightly builds, run with -Z macro-backtrace for more info)
